--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,6 @@ LINK_DIRECTORIES(/opt/mqm/lib64)
 
 SET(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-SET(SOURCE_FILES amqsmsolog.c)
+SET(SOURCE_FILES smsolog.c)
 
 ADD_LIBRARY(smsolog SHARED ${SOURCE_FILES})
