--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,10 @@
-cmake_minimum_required(VERSION 3.6)
+cmake_minimum_required(VERSION 3.5)
 project(mq_apicall_exit_c)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 INCLUDE_DIRECTORIES(/opt/mqm/inc)
-LINK_DIRECTORIES(/opt/mqm/lib64)
+#LINK_DIRECTORIES(/opt/mqm/lib64)
 
 SET(CMAKE_INCLUDE_CURRENT_DIR ON)
 
